@startuml
!pragma layout smetana

skinparam classAttributeIconSize 0
'skinparam linetype ortho

interface ArithmeticExpression {
+ {abstract} evaluate(DualNumber dn) : double
}

class Constant implements ArithmeticExpression {
- value : double
--
+ evaluate(DualNumber dn) : double
}

' note left of Constant
' return value
' end note

abstract BinaryOperator implements ArithmeticExpression {
BinaryOperator(left, right : ArithmeticExpression)
}

BinaryOperator *--> ArithmeticExpression : " # left"
BinaryOperator *--> ArithmeticExpression : " # right"

' note left of BinaryOperator
' left = leftOperand
' right = rightOperand
' end note

class Sum extends BinaryOperator {
--
+ evaluate(DualNumber dn)
}
class Product extends BinaryOperator {
+ calculate()
}

' note bottom of Product
' return left.calculate() *
'     right.calculate()
' end note

class Subtract extends BinaryOperator {
--
+ evaluate(DualNumber dn)
}


class Division extends BinaryOperator {
--
+ evaluate(DualNumber dn)
}


@enduml